syntax = "proto3";

package animals;

message Animal {
	string id = 1;
	string action = 2;
}

message AnimalRequest {
	string id = 1;
	string action = 2;
}

message AnimalsResponse {
	repeated Animal animals = 1;
}

message EmptyMessage {}

service Animals {
	rpc GetAnimal (AnimalRequest) returns (Animal);
	rpc GetAnimals (EmptyMessage) returns (stream Animal);
	rpc EditAnimal (stream Animal) returns (AnimalsResponse);
	rpc CreateAnimal (stream Animal) returns (stream Animal);
}
